--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   easy_scaffold: ^0.0.11
   intl: ^0.19.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.2
+  haptic_feedback: ^0.4.2
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
